<resources>
    <string name="app_name">Tyyar Food Delivery</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="preposition_for_date">on %s</string>
    <string name="preposition_for_time">at %s</string>
    <string name="relative_time">%1$s, %2$s</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="attachment_download_failed_message">Failed to download. Tap to retry.</string>
    <string name="attachment_open_error_message">"Can't open attachment."</string>
    <string name="attachment_upload_access_error_message">Error accessing file</string>
    <string name="attachment_upload_size_limit_error_message">File size too large</string>
    <string name="attachment_upload_source_camera_button">Take Photo</string>
    <string name="attachment_upload_source_gallery_button">Attach Photo</string>
    <string name="attachment_upload_type_error_message">File type not permitted</string>
    <string name="chat_account_offline_message">There are currently no agents online.</string>
    <string name="chat_activity_title">Chat</string>
    <string name="chat_agent_joined_message">%1$s joined the chat</string>
    <string name="chat_agent_left_message">%1$s left the chat</string>
    <string name="chat_end_dialog_cancel_button">Cancel</string>
    <string name="chat_end_dialog_confirm_button">End</string>
    <string name="chat_end_dialog_message">Your chat session will be closed</string>
    <string name="chat_end_dialog_title">End this chat?</string>
    <string name="chat_ended_message">Chat ended</string>
    <string name="chat_input_field_hint">Reply</string>
    <string name="chat_loading_message">Starting chat...</string>
    <string name="chat_menu_end_button">End chat</string>
    <string name="chat_session_timeout_message">"We've not heard from you for a while so this chat session has been closed. Please start a new chat if you still have questions."</string>
    <string name="chat_visitor_queue_message">Please wait for an agent. There are currently %1$s visitor(s) waiting to be served.</string>
    <string name="could_not_connect_error_message">"Sorry we can't connect you at the moment. Please try again later"</string>
    <string name="could_not_connect_error_title">Could not connect</string>
    <string name="email_transcript_cancel_button">"Don't send"</string>
    <string name="email_transcript_confirm_button">Send</string>
    <string name="email_transcript_email_cancel_button">Cancel</string>
    <string name="email_transcript_email_confirm_button">Ok</string>
    <string name="email_transcript_email_hint">email@address.com</string>
    <string name="email_transcript_email_message">Please enter your email address</string>
    <string name="email_transcript_message">Send a transcript of this chat to your email address</string>
    <string name="email_transcript_title">Email a transcript?</string>
    <string name="input_field_hint">Message</string>
    <string name="message_failed_tap_to_retry">Failed to send. Tap to retry.</string>
    <string name="no_agents_message">Sorry there are no agents available to chat. Please try again later or leave us a message.</string>
    <string name="no_agents_title">No agents available</string>
    <string name="no_connection_error_message">"You don't have an Internet connection at the moment. Please try again when connected"</string>
    <string name="no_connection_error_title">No connection</string>
    <string name="no_connectivity_toast_message">No connection</string>
    <string name="offline_email_error_hint">Please enter your email address</string>
    <string name="offline_email_error_message">Email is required</string>
    <string name="offline_email_hint">Email address</string>
    <string name="offline_menu_send_button">Send</string>
    <string name="offline_message_button">Leave a message</string>
    <string name="offline_message_cancel_button">Cancel</string>
    <string name="offline_message_error_hint">Please enter message</string>
    <string name="offline_message_error_message">Message is required</string>
    <string name="offline_message_hint">Message</string>
    <string name="offline_message_retry_button">Retry</string>
    <string name="offline_message_send_failed">Unable to send message.</string>
    <string name="offline_name_error_hint">Please enter your name</string>
    <string name="offline_name_error_message">Name is required</string>
    <string name="offline_name_hint">Name</string>
    <string name="offline_sent_confirmation_message">Your message has been sent</string>
    <string name="offline_validation_error_message">Please correct the above errors</string>
    <string name="pre_chat_account_offline_dialog_cancel_button">Cancel</string>
    <string name="pre_chat_account_offline_dialog_confirm_button">Message</string>
    <string name="pre_chat_account_offline_dialog_message">There are no agents currently online. Would you like to send a message?</string>
    <string name="pre_chat_departments_error_hint">Please select a department</string>
    <string name="pre_chat_departments_error_message">Department is required</string>
    <string name="pre_chat_departments_hint">Select a department</string>
    <string name="pre_chat_email_error_hint">Please enter your email address</string>
    <string name="pre_chat_email_error_message">Email is required</string>
    <string name="pre_chat_email_hint">Email address</string>
    <string name="pre_chat_email_validation_message">Please enter a valid email address.</string>
    <string name="pre_chat_menu_next_button">Next</string>
    <string name="pre_chat_message_error_hint">Please enter a message</string>
    <string name="pre_chat_message_error_message">Message is required</string>
    <string name="pre_chat_message_hint">Message</string>
    <string name="pre_chat_name_error_hint">Please enter your name</string>
    <string name="pre_chat_name_error_message">Name is required</string>
    <string name="pre_chat_name_hint">Name</string>
    <string name="pre_chat_phone_error_hint">Please enter your phone number</string>
    <string name="pre_chat_phone_error_message">Phone number is required</string>
    <string name="pre_chat_phone_hint">Phone number</string>
    <string name="pre_chat_phone_validation_message">Please enter a valid phone number.</string>
    <string name="pre_chat_validation_error_message">Please complete the required fields</string>
    <string name="rate_this_chat_comment_label">Comment</string>
    <string name="rate_this_chat_edit_comment_button">Edit comment...</string>
    <string name="rate_this_chat_leave_a_comment_button">Leave a comment...</string>
    <string name="rate_this_chat_leave_a_comment_title">Leave a comment</string>
    <string name="rate_this_chat_menu_item_send">Send</string>
    <string name="rate_this_chat_title">Rate this chat</string>
    <string name="reconnect_timeout_cancel_button">No</string>
    <string name="reconnect_timeout_confirm_button">Yes</string>
    <string name="reconnect_timeout_message">We have been unable to reconnect. Do you wish to continue trying?</string>
    <string name="reconnect_timeout_title">Connection lost</string>
    <string name="reconnecting_toast_message">Reconnecting...</string>
    <string name="required_field_template">%1$s *</string>
    <string name="bs_more">More</string>
    <string name="DELETE">Delete</string>
    <string name="EDIT">EDIT</string>
    <string name="account_activity_title">Account</string>
    <string name="account_fragment_title">Account</string>
    <string name="account_information_description">Change your account information</string>
    <string name="account_information_title">Account Information</string>
    <string name="account_registration_title">Register</string>
    <string name="account_sign_in_title">Sign in</string>
    <string name="action_search_contacts">Search Contacts</string>
    <string name="action_share_referral">Share Referral</string>
    <string name="active_promo">Active Promo</string>
    <string name="add">ADD</string>
    <string name="add_a_card">Add a Card</string>
    <string name="add_more_items">Add more items</string>
    <string name="add_new_address_button_text">Add New Address</string>
    <string name="add_new_card_button_text">Add New Payment Card</string>
    <string name="add_to_cart_button_text">Add to Order</string>
    <string name="adding_address_progress">Adding address to server…</string>
    <string name="addressbook_activity_title">Address Book</string>
    <string name="addresses_description">Add or remove a delivery address</string>
    <string name="addresses_title">Addresses</string>
    <string name="adjust_app_token">70tuvme50r9c</string>
    <string name="agree_to_updated_terms">I agree to the updated Terms</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="android">Android</string>
    <string name="android_pay_promotion">Free delivery with Android Pay</string>
    <string name="android_pay_promotion_checkout">Android Pay not selected</string>
    <string name="android_pay_promotion_description">Change your payment method to Android Pay or delivery will be %1$s.</string>
    <string name="android_pay_promotion_description_checkout">Change your payment method to Android Pay or delivery will be %1$s and your total will be %2$s.</string>
    <string name="apartment_number_optional">Apt/Suite Number (optional)</string>
    <string name="api_end_point">API Endpoint</string>
    <string name="app_feedback_email">feedback@doordash.com</string>
    <string name="app_feedback_title">DoorDash Android Feedback</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applying_promotion">Applying Promotion</string>
    <string name="asap_delivery_time_text">ASAP</string>
    <string name="available_promotions">Available Promotions</string>
    <string name="back_caps">BACK</string>
    <string name="become_a_dasher">Become a Dasher</string>
    <string name="best_value">Best Value</string>
    <string name="best_value_description">Order as much as you want for a low, flat delivery fee.</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bug_report_description_action">Submit bug</string>
    <string name="bug_report_description_hint">What triggers the bug? Have you seen this bug before? How can it be reproduced?</string>
    <string name="bug_report_description_title">Please describe the issue</string>
    <string name="bug_report_email_header">Bug in the Android Consumer App</string>
    <string name="bug_report_image_action">Next</string>
    <string name="bug_report_image_title">Please circle the issue</string>
    <string name="bug_report_subtitle_text">This is an employee-only bug reporting experience.</string>
    <string name="button_app_id">app-36a5c9e0b5c4fa3e</string>
    <string name="button_something_else">Something else</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="dasher_notes_optional">Delivery Instructions (optional)</string>
    <string name="email_address">Email</string>
    <string name="facebook_register_title">Continue with Facebook</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password">Password</string>
    <string name="register_with_email_label">or continue with email</string>
    <string name="save_address">Save Address</string>
    <string name="street_address">Street Address</string>
</resources>