<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:textColorHint="@color/black">

    <LinearLayout
        android:id="@+id/facebook_login_button_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14.0dip"
        android:background="@color/facebook_blue"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/facebook_login_button"
            style="@style/SelectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="8.0dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/facebook_login_icon"
                    android:layout_width="18.0dip"
                    android:layout_height="18.0dip"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_facebook_login_white"/>

                <TextView
                    android:id="@+id/facebook_login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dip"
                    android:fontFamily="sans-serif"
                    android:padding="4.0dip"
                    android:text="@string/facebook_register_title"
                    android:textColor="@color/white"
                    android:textSize="20.0sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/continue_with_email_text_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/facebook_login_button_wrapper"
        android:gravity="center_vertical">

        <View
            android:layout_width="0.0dip"
            android:layout_height="1.0dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:background="@color/light_gray"
            android:paddingRight="15.0dip"/>

        <TextView
            android:id="@+id/continue_with_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4.0dip"
            android:text="@string/register_with_email_label"
            android:textSize="14.0sp"/>

        <View
            android:layout_width="0.0dip"
            android:layout_height="1.0dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:background="@color/light_gray"
            android:paddingLeft="15.0dip"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registration_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/continue_with_email_text_wrapper"
        android:background="@color/white"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.0">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/input_first_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:imeOptions="actionNext"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/input_last_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:imeOptions="actionNext"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black">

            <EditText
                android:id="@+id/input_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:imeOptions="actionNext"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/password_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/register_button"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/dd_button_gray"
        android:clickable="true">

        <TextView
            android:id="@+id/actionButtonTitleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16.0dip"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/actionButtonSubtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16.0dip"/>
    </RelativeLayout>
</RelativeLayout>